# expert-graph-rag

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.integration.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
apps/api/: ask.py  experts.py  llm.py  query_optimizer.py  serializers.py  services.py  urls.py  views.py
apps/common/: demo_auth.py  env.py
apps/documents/: admin.py  embedding_backends.py  models.py  openalex.py  openalex_client.py  services.py  tasks.py  verification.py
apps/graphsync/: apps.py  services.py
apps/health/: services.py  urls.py  views.py
apps/ui/: urls.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
docs/: DEPLOYMENT.md  EXCELLENCE_PROMPT.md  SECURITY.md
frontend/: README.md
frontend/lovable-src/: index.html  package.json  (+1 more)
scripts/: build_lovable_frontend.sh  import_lovable_export.sh  import_stitch_screens.sh  init_prod_env.sh  prod_backup.sh  prod_deploy.sh  prod_restore.sh
tests/: test_api_ask.py  test_api_experts.py  test_api_search.py  test_chunking_embedding_tasks.py  test_compute_graph_metrics.py  test_demo_auth_and_audit.py  test_documents_models.py  test_embedding_backend_fallback.py  test_healthz.py  test_ingest_openalex.py  test_llm_service.py  test_openalex_client.py  test_query_optimizer.py  test_seed_and_startup.py  test_seed_interview_data.py  test_seed_openalex.py  test_sync_to_neo4j_integration.py  test_ui_demo.py  test_verify_data_pipeline.py
(+64 files in other folders)
